<resources>
    <string name="app_name">Walter\'s Shoe Shop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="shop_image_description">Brown cartoon image of a shoe shop</string>
    <string name="login_text">Walter\'s shoe shop!</string>
    <string name="welcome_text">Welcome to Walter\'s shoe shop!</string>
    <string name="getting_started_text">We hope you enjoy our app, lets get started with the instructions.</string>
    <string name="login_button">Login</string>
    <string name="instructions_button">Begin instructions</string>
    <string name="register_button"><u>Register</u></string>
    <string name="get_started_button">Let\'s get started</string>
    <string name="email_required">Please type your e-mail before proceeding</string>
    <string name="password_required">Please type your password before proceeding</string>
    <string name="email_and_password_required">Please type your e-mail and password before proceeding</string>
    <string name="first_instruction_text">Our app shows your shoe list, with all the shoes you have registered.</string>
    <string name="second_instruction_text">Click on the add button to register a new shoe to be shown on the list.</string>

    <string name="shoe_item_name">Name: %1$s</string>
    <string name="shoe_item_brand">Brand: %1$s</string>
    <string name="shoe_item_size">Size: %1$s</string>
    <string name="add_shoe_button">Add shoe button</string>
    <string name="logout">Logout</string>
</resources>
