<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.shoestore.ShoeSizeConverter" />

        <variable
            name="viewmodel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <!--Used LinearLayoutfor only having one child-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_gradient"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <!--Used ConstraintLayout because of complex layout-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/rounded_corners"
                android:elevation="@dimen/default_elevation">

                <Space
                    android:id="@+id/space1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="1" />

                <TextView
                    android:id="@+id/name_label"
                    style="@style/AppTheme.TextField"
                    android:text="@string/name"
                    android:textColor="@color/primaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/name_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space1"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/name_input"
                    style="@style/AppTheme.TextField"
                    android:background="@drawable/rounded_corners_no_fill"
                    android:inputType="text"
                    android:text="@={viewmodel.currentShoe.name}"
                    app:layout_constraintBottom_toTopOf="@+id/brand_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_label"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="Air Jordan Retro" />

                <TextView
                    android:id="@+id/brand_label"
                    style="@style/AppTheme.TextField"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/brand"
                    android:textColor="@color/primaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/brand_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_input"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/brand_input"
                    style="@style/AppTheme.TextField"
                    android:background="@drawable/rounded_corners_no_fill"
                    android:inputType="text"
                    android:text="@={viewmodel.currentShoe.company}"
                    app:layout_constraintBottom_toTopOf="@+id/size_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/brand_label"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="Nike" />

                <TextView
                    android:id="@+id/size_label"
                    style="@style/AppTheme.TextField"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/size"
                    android:textColor="@color/primaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/size_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/brand_input"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/size_input"
                    style="@style/AppTheme.TextField"
                    android:background="@drawable/rounded_corners_no_fill"
                    android:inputType="numberDecimal"
                    android:text="@={viewmodel.currentShoe.size}"
                    app:layout_constraintBottom_toTopOf="@+id/description_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_label"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="42.0" />

                <TextView
                    android:id="@+id/description_label"
                    style="@style/AppTheme.TextField"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/description"
                    android:textColor="@color/primaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/description_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_input"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/description_input"
                    style="@style/AppTheme.TextField"
                    android:background="@drawable/rounded_corners_no_fill"
                    android:inputType="textMultiLine"
                    android:text="@={viewmodel.currentShoe.description}"
                    app:layout_constraintBottom_toTopOf="@+id/cancel_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_label"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="Great shoe for basketball, casual events and daily use" />

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/AppTheme.Button"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_field_margin"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toTopOf="@+id/space2"
                    app:layout_constraintEnd_toStartOf="@+id/save_button"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_input"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintWidth_max="@dimen/max_half_button_width" />

                <Button
                    android:id="@+id/save_button"
                    style="@style/AppTheme.Button"
                    android:layout_marginTop="@dimen/default_margin"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:text="@string/save"
                    app:layout_constraintBottom_toTopOf="@+id/space2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/cancel_button"
                    app:layout_constraintTop_toBottomOf="@+id/description_input"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintWidth_max="@dimen/max_half_button_width" />

                <Space
                    android:id="@+id/space2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cancel_button"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>