<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_gradient">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/instructions_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/rounded_corners"
                android:elevation="@dimen/default_elevation">

                <Space
                    android:id="@+id/space1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/instructions_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="2" />

                <TextView
                    android:id="@+id/instructions_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_horizontal"
                    android:text="@string/first_instruction_text"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/large_title"
                    app:layout_constraintBottom_toTopOf="@+id/space2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space1"
                    app:layout_constraintVertical_bias="0.8"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Space
                    android:id="@+id/space2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/instructions_2_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructions_text"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="1" />

                <TextView
                    android:id="@+id/instructions_2_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_horizontal"
                    android:text="@string/second_instruction_text"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/large_title"
                    app:layout_constraintBottom_toTopOf="@+id/space3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space2"
                    app:layout_constraintVertical_bias="0.8"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Space
                    android:id="@+id/space3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/shoe_list_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructions_2_text"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="2" />

                <Button
                    android:id="@+id/shoe_list_button"
                    style="@style/AppTheme.Button"
                    android:layout_marginTop="@dimen/default_field_margin"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:text="@string/get_started_button"
                    app:layout_constraintBottom_toTopOf="@+id/space4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space3"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Space
                    android:id="@+id/space4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shoe_list_button"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintVertical_weight="3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>